Increase cover opacity for more legible text. Fix button padding.

--- a/app/assets/stylesheets/partials/anime-page.css.scss
+++ b/app/assets/stylesheets/partials/anime-page.css.scss
@@ -219,7 +219,7 @@
         .btn {
           width: 100%;
           background: #16a085;
-          padding: 12px;
+          padding: 8px 0 6px 0;
           font-size: 17px;
         }
         &.open {
