--- a/app/assets/stylesheets/partials/media-bg-image.css.scss
+++ b/app/assets/stylesheets/partials/media-bg-image.css.scss
@@ -34,10 +34,9 @@
 
   &.series {
     width: 100%;
-    background-size: cover !important;
     background-repeat: no-repeat !important;
     position: absolute;
-    opacity: .10;
+    opacity: .05;
     top: 0;
     bottom: 0;
   }
